; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_ledc.c__ledc_op_lock_release.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_ledc.c__ledc_op_lock_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@s_ledc_fade_rec = common dso_local global %struct.TYPE_3__*** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @_ledc_op_lock_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_ledc_op_lock_release(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.TYPE_3__***, %struct.TYPE_3__**** @s_ledc_fade_rec, align 8
  %7 = load i64, i64* %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__**, %struct.TYPE_3__*** %6, i64 %7
  %9 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %8, align 8
  %10 = load i64, i64* %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %9, i64 %10
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %5, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = icmp ne %struct.TYPE_3__* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @xSemaphoreGive(i32 %18)
  br label %20

20:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @xSemaphoreGive(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
